--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,3 +8,7 @@ plugins:
     spec: "@yarnpkg/plugin-workspace-tools"
 
 yarnPath: .yarn/releases/yarn-3.6.1.cjs
+
+npmRegistryServer: "http://localhost:4873/"
+unsafeHttpWhitelist:
+  - localhost:4873
