--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,3 +1,15 @@
+ENV['RCT_NEW_ARCH_ENABLED'] = '1'
+
+# ws_dir = Pathname.new(__dir__)
+# ws_dir = ws_dir.parent until
+#   File.exist?("#{ws_dir}/node_modules/react-native-test-app/test_app.rb") ||
+#   ws_dir.expand_path.to_s == '/'
+# require "#{ws_dir}/node_modules/react-native-test-app/test_app.rb"
+
+# workspace 'RtnDevConsoleExample.xcworkspace'
+
+# use_test_app! :hermes_enabled => true
+
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
@@ -7,17 +19,6 @@ require Pod::Executable.execute_command('node', ['-p',
 
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
-
-# If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
-# because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
-#
-# To fix this you can also exclude `react-native-flipper` using a `react-native.config.js`
-# ```js
-# module.exports = {
-#   dependencies: {
-#     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
-# ```
-flipper_config = ENV['NO_FLIPPER'] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
 
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
@@ -32,11 +33,6 @@ target 'RtnDevConsoleExample' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    # Enables Flipper.
-    #
-    # Note that if you have use_frameworks! enabled, Flipper will not work and
-    # you should disable the next line.
-    :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -60,7 +56,8 @@ target 'RtnDevConsoleExample' do
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      :mac_catalyst_enabled => false
+      :mac_catalyst_enabled => false,
+      # :ccache_enabled => true
     )
   end
 end
