--- a/example/package.json
+++ b/example/package.json
@@ -1,40 +1,47 @@
 {
   "name": "rtn-dev-console-example",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "build:android": "npm run mkdist && react-native bundle --entry-file index.js --platform android --dev true --bundle-output dist/main.android.jsbundle --assets-dest dist && react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
+    "build:ios": "npm run mkdist && react-native bundle --entry-file index.js --platform ios --dev true --bundle-output dist/main.ios.jsbundle --assets-dest dist && react-native build-ios --scheme RtnDevConsoleExample --mode Debug --extra-params \"-sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO\"",
     "ios": "react-native run-ios",
+    "mkdist": "node -e \"require('node:fs').mkdirSync('dist', { recursive: true, mode: 0o755 })\"",
     "start": "react-native start",
-    "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
-    "build:ios": "cd ios && xcodebuild -workspace RtnDevConsoleExample.xcworkspace -scheme RtnDevConsoleExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO",
     "pod-install": "npm run pod-install-fabric",
-    "pod-install-fabric": "cd ios && NO_FLIPPER=1 USE_FRAMEWORKS=static RCT_NEW_ARCH_ENABLED=1 bundle exec pod install",
-    "pod-install-legacy": "cd ios && USE_FRAMEWORKS=static RCT_NEW_ARCH_ENABLED=0 bundle exec pod install",
+    "pod-install-fabric": "cd ios && NO_FLIPPER=1 USE_FRAMEWORKS=static RCT_NEW_ARCH_ENABLED=1 bundle exec pod install --repo-update",
+    "pod-install-legacy": "cd ios && USE_FRAMEWORKS=static RCT_NEW_ARCH_ENABLED=0 bundle exec pod install --repo-update",
     "dev": "yarn pod-install && yarn ios",
     "dev-nuke": "rm -rf ../yarn.lock && yarn && yarn pod-install && yarn ios",
     "prestart": "rm -f node_modules/react-native-config/ios/ReactNativeConfig/GeneratedDotEnv.m node_modules/react-native-config/android/build/generated/source/buildConfig/debug/com/lugg/RNCConfig/BuildConfig.java node_modules/react-native-config/android/build/generated/source/buildConfig/release/com/lugg/RNCConfig/BuildConfig.java"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-config": "^1.5.1",
-    "react-native-error-boundary": "^1.2.4",
+    "react": "18.3.1",
+    "react-hook-form": "^7.53.2",
+    "react-native": "0.76.1",
+    "react-native-error-boundary": "^1.2.7",
     "react-native-notifications": "^5.1.0",
-    "react-native-uuid": "^2.0.2",
-    "rtn-dev-console": "../rtn-dev-console-0.0.0-local.181.tgz",
-    "rxjs": "^7.8.1"
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-uuid": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "react-native-dotenv": "^3.4.11"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.0",
+    "@react-native-community/cli-platform-android": "15.0.0",
+    "@react-native-community/cli-platform-ios": "15.0.0",
+    "@react-native/babel-preset": "0.76.1",
+    "@react-native/eslint-config": "0.76.1",
+    "@react-native/metro-config": "0.76.1",
+    "@react-native/typescript-config": "0.76.1",
+    "@rnx-kit/metro-config": "^2.0.0",
+    "react-native-builder-bob": "^0.31.0",
+    "react-native-test-app": "^4.0.0"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@3.6.4"
 }
