--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "rtn-dev-console",
   "version": "0.3.0",
   "description": "Cross platform terminal Fabric component for react-native using SwiftSH/SwiftTerm (WIP) for iOS and Termux (TODO) for android.",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "types": "lib/typescript/src/index.d.ts",
-  "react-native": "src/index",
-  "source": "src/index",
+  "source": "./src/index.tsx",
+  "main": "./lib/commonjs/index.js",
+  "module": "./lib/module/index.js",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./lib/typescript/module/src/index.d.ts",
+        "default": "./lib/module/index.js"
+      },
+      "require": {
+        "types": "./lib/typescript/commonjs/src/index.d.ts",
+        "default": "./lib/commonjs/index.js"
+      }
+    }
+  },
   "files": [
     "src",
     "lib",
@@ -14,6 +24,7 @@
     "ios",
     "cpp",
     "*.podspec",
+    "react-native.config.json",
     "!ios/build",
     "!android/build",
     "!android/gradle",
@@ -28,7 +39,7 @@
   "scripts": {
     "example": "yarn workspace rtn-dev-console-example",
     "test": "jest",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build",
@@ -41,22 +52,22 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TheTekton337/rtn-dev-console.git"
+    "url": "git+https://github.com/TheJanitor337/rtn-dev-console.git"
   },
-  "author": "TJW <thetekton337@ixqus.com> (https://github.com/TheTekton337)",
+  "author": "T.J. Wood <thejanitor337@ixqus.com> (https://github.com/TheJanitor337)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TheTekton337/rtn-dev-console/issues"
+    "url": "https://github.com/TheJanitor337/rtn-dev-console/issues"
   },
-  "homepage": "https://github.com/TheTekton337/rtn-dev-console#readme",
+  "homepage": "https://github.com/TheJanitor337/rtn-dev-console#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://localhost:4873"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.5.0",
     "@react-native/eslint-config": "^0.73.1",
-    "@release-it/conventional-changelog": "^5.0.0",
+    "@release-it/conventional-changelog": "^9.0.2",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.44",
     "commitlint": "^17.0.2",
@@ -66,10 +77,10 @@
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-builder-bob": "^0.23.2",
-    "release-it": "^15.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-builder-bob": "^0.31.0",
+    "release-it": "^17.10.0",
     "turbo": "^1.10.7",
     "typescript": "^5.2.2"
   },
@@ -120,6 +131,7 @@
       "prettier"
     ],
     "rules": {
+      "react/react-in-jsx-scope": "off",
       "prettier/prettier": [
         "error",
         {
@@ -147,19 +159,42 @@
     "source": "src",
     "output": "lib",
     "targets": [
-      "commonjs",
-      "module",
+      "codegen",
+      [
+        "commonjs",
+        {
+          "esm": true
+        }
+      ],
+      [
+        "module",
+        {
+          "esm": true
+        }
+      ],
       [
         "typescript",
         {
-          "project": "tsconfig.build.json"
+          "project": "tsconfig.build.json",
+          "esm": true
         }
       ]
     ]
   },
   "codegenConfig": {
     "name": "RNRtnSshTerminalViewSpec",
-    "type": "components",
-    "jsSrcsDir": "src"
+    "type": "all",
+    "jsSrcsDir": "src",
+    "outputDir": {
+      "ios": "ios/generated",
+      "android": "android/generated"
+    },
+    "android": {
+      "javaPackageName": "com.rtndevconsole"
+    }
+  },
+  "create-react-native-library": {
+    "type": "view-new",
+    "version": "0.43.0"
   }
 }
